# mlir-basic

./: .gitignore  CMakeLists.txt  README.md
include/Dialect/Toy/IR/: CMakeLists.txt  ToyBase.td  ToyOps.h  ToyOps.td
include/Dialect/Toy/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/Toy/IR/: CMakeLists.txt  ToyOps.cpp
lib/Dialect/Toy/Transforms/: CMakeLists.txt  ToySamplePass.cpp
tools/: CMakeLists.txt  mlir-toy-opt.cpp
